--- a/NOVA/Views/Satis/FiyatYonetimi.cshtml
+++ b/NOVA/Views/Satis/FiyatYonetimi.cshtml
@@ -729,7 +729,7 @@
                     getFiyatlarAsync().then(function (data) {
                         fiyatlar = data;
                     }).then(function () {
-                        $('#table').bootstrapTable('refresh')
+                       /* $('#table').bootstrapTable('refresh')*/
                     })
                 });
                 }
@@ -748,7 +748,7 @@
                     getFiyatlarAsync().then(function (data) {
                         fiyatlar = data;
                     }).then(function () {
-                        $('#table2').bootstrapTable('refresh')
+                       /* $('#table2').bootstrapTable('refresh')*/
                     })
                 });
             }
