--- a/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
+++ b/NOVA/Views/Sevkiyat/SiparisRaporu.cshtml
@@ -361,7 +361,7 @@
     }
     $(document).ready(function () {
 
-        $.getJSON("http://192.168.2.13:83/api/detaylisip", function (data) {
+        $.getJSON("http://192.168.2.13:83/api/mongo/detayli", function (data) {
             detayli = data;
         }).done(function () {
             $('#table').bootstrapTable("refresh", {
