--- a/NOVA/Views/Shared/_Layout_common.cshtml
+++ b/NOVA/Views/Shared/_Layout_common.cshtml
@@ -109,12 +109,14 @@
 
                 @RenderBody()
 
-                <footer class="content-footer footer bg-footer-theme my-1" style="background-color:transparent !important">
-                    <div style="width:100%;display: flex;justify-content: center;align-items: center;height: 50px;">
-                        2023 © designed by<img src="/assets/img/icons/brands/Nova.png" style="width: auto;height: inherit;margin-left: -8px;margin-right: -9px;transform: scale(0.6);">
-                        <a href="#" target="_blank" class="footer-link fw-bolder" style="width: min-content;">  NOVA</a>
-                    </div>
-                </footer>
+            <div class="foot" style="position:absolute;bottom:0;width:80%">
+
+                <div class="text-center" style="margin-left:7%">
+                    ©
+                    <script>document.write(2022);</script>, designed by
+                    <a href="#" target="_blank"> <img src="/assets/img/icons/brands/Nova.png" height="auto" width="2%" class="mb-1" /> NOVA</a>
+                </div>
+            </div>
 
             </div>
         </div>
