--- a/NOVA/Views/Shared/_Layout_menu2.cshtml
+++ b/NOVA/Views/Shared/_Layout_menu2.cshtml
@@ -94,7 +94,7 @@
                 </li>
                 <li class="menu-item" id="depoTransfer" style="display: @ViewBag.DisplayDepoTransfer">
                     <a href="@Url.Action("DepoTransfer", "Sevkiyat")" class="menu-link">
-                        <div data-i18n="Without menu">Sevk & Kabul İşlemleri</div>
+                        <div data-i18n="Without menu">Depo Transfer</div>
                     </a>
                 </li>
             </ul>
